--- a/index.html
+++ b/index.html
@@ -43,6 +43,26 @@
     </header>
     
 
+    <main>
+        <section id="sectioninicio">
+            <H2>Ola eu sou</H2>
+            <h1>João Vitor Borges Arruda</h1>
+            <p>escrever dps....</p>
+            <a download="Curriculo-João Vitor" href="">Download Cv</a>
+        </section>
+
+        <section></section>
+
+        <section></section>
+
+        <section></section>
+
+        <section></section>
+
+        <section></section>
+
+    </main>
+
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
