--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="sectioninicio">
             <H2>Ola eu sou</H2>
             <h1>João Vitor Borges Arruda</h1>
-            <p>escrever dps....</p>
+            <p>escrever dps...</p>
             <a download="Curriculo-João Vitor" href="">Download Cv</a>
         </section>
 
