--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <header id="headerh">
+        <div>
+            <h1>João Vitor</h1>
+             <input type="checkbox" id="botao menu">
+            <label for="botao menu">&#9776</label>
+        </div>
+    </header>
     <header id="headerv">
         <div id="profile">
             <div id="profilefoto"></div>
@@ -45,10 +52,15 @@
 
     <main>
         <section id="sectioninicio">
-            <H2>Ola eu sou</H2>
-            <h1>João Vitor Borges Arruda</h1>
-            <p>escrever dps...</p>
-            <a download="Curriculo-João Vitor" href="">Download Cv</a>
+            <div id="incdescricao">
+                <H2>Ola eu sou</H2>
+                <h1>João Vitor Borges Arruda</h1>
+                <p>escrever dps...</p>
+                <a download="Curriculo-João Vitor" href="">Download Cv</a>
+            </div>
+            <div id="incfoto">
+                <img src="img/jv.jpg" alt="minha foto">
+            </div>
         </section>
 
         <section></section>
