--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div id="incdescricao">
                 <H2>Ola eu sou</H2>
                 <h1>João Vitor Borges Arruda</h1>
-                <p>escrever dps...</p>
+                <p>escrever dps....</p>
                 <a download="Curriculo-João Vitor" href="">Download Cv</a>
             </div>
             <div id="incfoto">
