--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" id="topo">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,9 +22,9 @@
         </div>
 
         <nav id="menuv">
-            <a href=""> <ion-icon name="home-outline"></ion-icon> inicio</a>
-            <a href=""> <ion-icon name="person-outline"></ion-icon> Sobre mim</a>
-            <a href=""> <ion-icon name="build-outline"></ion-icon> Serviços</a>
+            <a href="#topo"> <ion-icon name="home-outline"></ion-icon> inicio</a>
+            <a href="#sobremim"> <ion-icon name="person-outline"></ion-icon> Sobre mim</a>
+            <a href="servico"> <ion-icon name="build-outline"></ion-icon> Serviços</a>
             <a href=""> <ion-icon name="briefcase-outline"></ion-icon> Portifolio</a>
             <a href=""> <ion-icon name="reader-outline"></ion-icon> Blogs</a>
             <a href="" id="contatolink"> <ion-icon name="call-outline"></ion-icon> Contato</a>
@@ -49,26 +49,169 @@
         </nav>
 
     </header>
-    
 
     <main>
         <section id="sectioninicio">
-            <div id="incdescricao">
-                <H2>Ola eu sou</H2>
-                <h1>João Vitor Borges Arruda</h1>
-                <p>escrever dps....</p>
-                <a download="Curriculo-João Vitor" href="">Download Cv</a>
+            <div id="iniciodescricao">
+                <h2>ola, eu sou:</h2>
+                <h1>João Vitor</h1>
+                <p>escrever dps...</p>,
+                <a href="">Download CV</a>
             </div>
-            <div id="incfoto">
-                <img src="img/jv.jpg" alt="minha foto">
+
+            <div id="iniciofoto">
+             <img src="img/jv.jpg" alt="">
             </div>
         </section>
 
-        <section></section>
+        <section id="sobremim">
+           <div id="sobremimgradefotos">
 
-        <section></section>
+              <div id="sobremimfotoscoluna1">
+                  <figure class="sobremimfotos">
+                    <img src="img/jv.jpg" alt="">
+                  </figure>
+                  <figure class="sobremimfotos">
+                    <img src="img/jv.jpg" alt="">
+                  </figure>
+              </div>
 
-        <section></section>
+              <div id="sobremimfotocoluna2">
+                  <figure class="sobremimfotos">
+                    <img src="img/jv.jpg" alt="">
+                  </figure>
+                  <figure class="sobremimfotos">
+                    <img src="img/jv.jpg" alt="">
+                  </figure>
+              </div>
+
+           </div> 
+
+           <div id="sobremimtxt">
+
+            <h2>Sobre mim</h2>
+
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque aliquid non corporis nam molestiae,
+            </p>
+
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque aliquid non corporis nam molestiae,
+            </p>
+
+            <div id="sobrerod">
+
+               <div>
+                   <div class="sbmquantidade">
+                    <p>5K</p>
+                    <p>Projetos completos</p>
+                   </div>
+                   <a href="">
+                    Contato
+                    </a>
+                </div>
+
+
+               <div>
+                    <div class="sbmquantidade">
+                        <p>3K</p>
+                        <p>Clientes Satisfeitos</p>
+                    </div>
+                    <a href="">
+                        Portifolio
+                    </a>
+                </div>
+
+
+             </div>
+
+        </div>
+        </section>
+
+        <section id="servico">
+
+            <h2>Serviços</h2>
+            <div id="servicograde">
+                <div class="card">
+                    <h3>Web Desingn</h3>
+                    <p>
+                        ujsjebyrfbjhgafjbnweqrmfe
+                        asdwgeryfgedssbfhdgsa
+                        Asdhbwhfdyg
+                    </p>
+                </div>
+            </div>
+
+            <div id="servicograde">
+                <div class="card">
+                    <h3>Web Desingn</h3>
+                    <p>
+                        ujsjebyrfbjhgafjbnweqrmfe
+                        asdwgeryfgedssbfhdgsa
+                        Asdhbwhfdyg
+                    </p>
+                </div>
+            </div>
+
+            <div id="servicograde">
+                <div class="card">
+                    <h3>Web Desingn</h3>
+                    <p>
+                        ujsjebyrfbjhgafjbnweqrmfe
+                        asdwgeryfgedssbfhdgsa
+                        Asdhbwhfdyg
+                    </p>
+                </div>
+            </div>
+
+            <div id="servicograde">
+                <div class="card">
+                    <h3>Web Desingn</h3>
+                    <p>
+                        ujsjebyrfbjhgafjbnweqrmfe
+                        asdwgeryfgedssbfhdgsa
+                        Asdhbwhfdyg
+                    </p>
+                </div>
+            </div>
+
+            <div id="servicograde">
+                <div class="card">
+                    <h3>Web Desingn</h3>
+                    <p>
+                        ujsjebyrfbjhgafjbnweqrmfe
+                        asdwgeryfgedssbfhdgsa
+                        Asdhbwhfdyg
+                    </p>
+                </div>
+            </div>
+
+            <div id="servicograde">
+                <div class="card">
+                    <h3>Web Desingn</h3>
+                    <p>
+                        ujsjebyrfbjhgafjbnweqrmfe
+                        asdwgeryfgedssbfhdgsa
+                        Asdhbwhfdyg
+                    </p>
+                </div>
+            </div>
+
+        </section>
+
+        <section id="portifolio">
+            <div id="portifoliocardimg">
+                <div id="">
+                    <img src="img/tba.png" alt="">
+                </div>
+                <div id="portifoliocardtitulo">
+                    <p>10/05/2024 - Lista de LInks</p>
+                    <p>Projeto desencolvido durante o curso de HTML/CSS 
+                        - Criação de websites no Senac de Gurupi.
+                    </p>
+                </div>
+            </div>
+        </section>
 
         <section></section>
 
