--- a/index.html
+++ b/index.html
@@ -200,9 +200,48 @@
         </section>
 
         <section id="portifolio">
+
+            <div id="portifoliograde">
+                <div id="portifoliocardimg">
+                    <div class="overflow">
+                        <div id="img1"></div>
+                    </div>
+                    <div id="portifoliocardtitulo">
+                        <p>10/05/2024 - Lista de LInks</p>
+                        <p>Projeto desencolvido durante o curso de HTML/CSS
+                            - Criação de websites no Senac de Gurupi.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
             <div id="portifoliocardimg">
-                <div id="">
-                    <img src="img/tba.png" alt="">
+                <div class="overflow">
+                    <div id="img2"></div>
+                </div>
+                <div id="portifoliocardtitulo">
+                    <p>10/05/2024 - Lista de LInks</p>
+                    <p>Projeto desencolvido durante o curso de HTML/CSS 
+                        - Criação de websites no Senac de Gurupi.
+                    </p>
+                </div>
+            </div>
+
+            <div id="portifoliocardimg">
+                <div class="overflow">
+                    <div id="img3"></div>
+                </div>
+                <div id="portifoliocardtitulo">
+                    <p>10/05/2024 - Lista de LInks</p>
+                    <p>Projeto desencolvido durante o curso de HTML/CSS 
+                        - Criação de websites no Senac de Gurupi.
+                    </p>
+                </div>
+            </div>
+
+            <div id="portifoliocardimg">
+                <div class="overflow">
+                    <div id="img4"></div>
                 </div>
                 <div id="portifoliocardtitulo">
                     <p>10/05/2024 - Lista de LInks</p>
@@ -212,8 +251,6 @@
                 </div>
             </div>
         </section>
-
-        <section></section>
 
         <section></section>
 
