--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         Asdhbwhfdyg
                     </p>
                 </div>
-            </div>
+            
 
             <div id="servicograde">
                 <div class="card">
@@ -213,8 +213,7 @@
                         </p>
                     </div>
                 </div>
-            </div>
-
+            
             <div id="portifoliocardimg">
                 <div class="overflow">
                     <div id="img2"></div>
@@ -250,9 +249,44 @@
                     </p>
                 </div>
             </div>
+
+        </div>
         </section>
 
-        <section></section>
+        <section id="contato">
+            <div id="contatotxt">
+                <h2>Qual sua historia? Entre em contato</h2>
+                <p>iwyruweghqwgeyfgyegfhsadgrfgwyegrjhfgysadghjfgtwhsb
+                    swuqwyr3rytewytgrfywegfudghfghydgfygfhdshyfgyhe
+                </p>
+
+                <div>
+                    <ion-icon name="person-outline"></ion-icon>
+                    <p>endereç<object data="" type=""></object></p>
+                </div>
+
+                <div>
+                    <ion-icon name="person-outline"></ion-icon>
+                    <p>email</p>
+                </div>
+
+                <div>
+                    <ion-icon name="person-outline"></ion-icon>
+                    <p>numero</p>
+                </div>
+
+                <div id="contatoform">
+
+                    <h3>Escreva Algo</h3>
+
+                    <input type="text" placeholder="nome" id="inputnome">
+                    <input type="email" placeholder="email" id="inputemail">
+                    <input type="text" placeholder="assunto" id="inputassunto">
+                    <textarea name="" id="" placeholder="Sua mensagem"></textarea>
+                    <a href="">Enviar</a>
+                </div>
+            </div>
+        </section>
 
     </main>
 
