--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
         <nav id="menuv">
             <a href="#topo"> <ion-icon name="home-outline"></ion-icon> inicio</a>
             <a href="#sobremim"> <ion-icon name="person-outline"></ion-icon> Sobre mim</a>
-            <a href="servico"> <ion-icon name="build-outline"></ion-icon> Serviços</a>
-            <a href=""> <ion-icon name="briefcase-outline"></ion-icon> Portifolio</a>
-            <a href=""> <ion-icon name="reader-outline"></ion-icon> Blogs</a>
-            <a href="" id="contatolink"> <ion-icon name="call-outline"></ion-icon> Contato</a>
+            <a href="#servico"> <ion-icon name="build-outline"></ion-icon> Serviços</a>
+            <a href="#portifolio"> <ion-icon name="briefcase-outline"></ion-icon> Portifolio</a>
+            <a href="#contato" id="contatolink"> <ion-icon name="call-outline"></ion-icon> Contato</a>
         </nav>
 
         <nav id="social">
@@ -55,7 +54,9 @@
             <div id="iniciodescricao">
                 <h2>ola, eu sou:</h2>
                 <h1>João Vitor</h1>
-                <p>escrever dps...</p>,
+                <p> Ola sou o joão vitor, um estudunte do
+                    encino medio que quer se incerir no 
+                    mercado de trabalho</p>,
                 <a href="">Download CV</a>
             </div>
 
@@ -135,54 +136,54 @@
                 <div class="card">
                     <h3>Web Desingn</h3>
                     <p>
-                        ujsjebyrfbjhgafjbnweqrmfe
-                        asdwgeryfgedssbfhdgsa
-                        Asdhbwhfdyg
+                        Ola sou o joão vitor, um estudunte do
+                        encino medio que quer se incerir no 
+                        mercado de trabalho
                     </p>
                 </div>
             
                 <div class="card">
                     <h3>Web Desingn</h3>
                     <p>
-                        ujsjebyrfbjhgafjbnweqrmfe
-                        asdwgeryfgedssbfhdgsa
-                        Asdhbwhfdyg
+                        Ola sou o joão vitor, um estudunte do
+                        encino medio que quer se incerir no 
+                        mercado de trabalho
                     </p>
                 </div>
 
                 <div class="card">
                     <h3>Web Desingn</h3>
                     <p>
-                        ujsjebyrfbjhgafjbnweqrmfe
-                        asdwgeryfgedssbfhdgsa
-                        Asdhbwhfdyg
+                        Ola sou o joão vitor, um estudunte do
+                     encino medio que quer se incerir no 
+                     mercado de trabalho
                     </p>
                 </div>
 
                 <div class="card">
                     <h3>Web Desingn</h3>
                     <p>
-                        ujsjebyrfbjhgafjbnweqrmfe
-                        asdwgeryfgedssbfhdgsa
-                        Asdhbwhfdyg
+                        Ola sou o joão vitor, um estudunte do
+                     encino medio que quer se incerir no 
+                     mercado de trabalho
                     </p>
                 </div>
 
                 <div class="card">
                     <h3>Web Desingn</h3>
                     <p>
-                        ujsjebyrfbjhgafjbnweqrmfe
-                        asdwgeryfgedssbfhdgsa
-                        Asdhbwhfdyg
+                        Ola sou o joão vitor, um estudunte do
+                        encino medio que quer se incerir no 
+                        mercado de trabalho
                     </p>
                 </div>
 
                 <div class="card">
                     <h3>Web Desingn</h3>
                     <p>
-                        ujsjebyrfbjhgafjbnweqrmfe
-                        asdwgeryfgedssbfhdgsa
-                        Asdhbwhfdyg
+                        Ola sou o joão vitor, um estudunte do
+                        encino medio que quer se incerir no 
+                        mercado de trabalho
                     </p>
                 </div>
             </div>
@@ -243,38 +244,35 @@
         </section>
 
         <section id="contato">
-            <div id="contatotxt">
-                <h2>Qual sua historia? Entre em contato</h2>
-                <p>iwyruweghqwgeyfgyegfhsadgrfgwyegrjhfgysadghjfgtwhsb
-                    swuqwyr3rytewytgrfywegfudghfghydgfygfhdshyfgyhe
-                </p>
-
-                <div>
-                    <ion-icon name="person-outline"></ion-icon>
-                    <p>endereç<object data="" type=""></object></p>
+            <div id="contatorow">
+                <div id="contatotxt">
+                    <h2>Qual sua historia? Entre em contato</h2>
+                    <p>
+                    Ola sou o joão vitor, um estudunte do
+                     encino medio que quer se incerir no 
+                     mercado de trabalho
+                    </p>
+                    <div>
+                        <ion-icon name="person-outline"></ion-icon>
+                        <p>endereço: inderteminado</p>
+                    </div>
+                    <div>
+                        <ion-icon name="person-outline"></ion-icon>
+                        <p>email: joaovitorborgesarr@gmail.com</p>
+                    </div>
+                    <div>
+                        <ion-icon name="person-outline"></ion-icon>
+                        <p>numero: (63) 99300-5349</p>
+                    </div>
                 </div>
-
-                <div>
-                    <ion-icon name="person-outline"></ion-icon>
-                    <p>email</p>
+                <div id="contatoform">
+                    <h3>Escreva Algo</h3>
+                    <input type="text" placeholder="nome" id="inputnome">
+                    <input type="email" placeholder="email" id="inputemail">
+                    <input type="text" placeholder="assunto" id="inputassunto">
+                    <textarea name="" id="" placeholder="Sua mensagem"></textarea>
+                    <a href="">Enviar</a>
                 </div>
-
-                <div>
-                    <ion-icon name="person-outline"></ion-icon>
-                    <p>numero</p>
-                </div>
-
-            </div>
-
-            <div id="contatoform">
-
-                <h3>Escreva Algo</h3>
-
-                <input type="text" placeholder="nome" id="inputnome">
-                <input type="email" placeholder="email" id="inputemail">
-                <input type="text" placeholder="assunto" id="inputassunto">
-                <textarea name="" id="" placeholder="Sua mensagem"></textarea>
-                <a href="">Enviar</a>
             </div>
         </section>
 
